--- a/targets/Makefile.am
+++ b/targets/Makefile.am
@@ -8,10 +8,6 @@ if WITH_INTERNAL_RPC
 MAYBE_RPC = rpc
 endif
 
-if WITH_COMBO
-MAYBE_COMBO = combo
-endif
+SUBDIRS = dummy $(MAYBE_RPC) $(MAYBE_BMV2) combo
 
-SUBDIRS = dummy $(MAYBE_RPC) $(MAYBE_BMV2) $(MAYBE_COMBO)
-
-DIST_SUBDIRS = dummy rpc $(MAYBE_BMV2)
+DIST_SUBDIRS = dummy rpc $(MAYBE_BMV2) combo
