--- a/targets/combo/Makefile.am
+++ b/targets/combo/Makefile.am
@@ -1,10 +1,8 @@
 # a little hacky: the headers are in the parent of the configure subdir
-AM_CPPFLAGS += \
--I$(top_srcdir)/../../include
-
-if WITH_PCAP_FIX
-AM_CPPFLAGS += -DWITH_PCAP_FIX
-endif
+AM_CPPFLAGS = \
+-I$(top_srcdir)/include \
+-I$(top_srcdir)/lib \
+-std=c++11
 
 libpi_combo_la_SOURCES = \
 pi_imp.cpp \
@@ -14,5 +12,4 @@ pi_counter_imp.cpp \
 pi_meter_imp.cpp \
 pi_learn_imp.cpp
 
-libpi_combo_la_LIBADD = 
 lib_LTLIBRARIES = libpi_combo.la
