--- a/CLI/Makefile.am
+++ b/CLI/Makefile.am
@@ -66,7 +66,7 @@ endif
 bin_PROGRAMS += pi_CLI_combo
 
 pi_CLI_combo_LDADD = $(common_libs) \
--L$(top_builddir)/targets/combo/dummy -lp4dev-d \
+-lp4dev \
 $(top_builddir)/targets/combo/libpi_combo.la 
 
 pi_CLI_combo_SOURCES =
