Combo [FEATURE] Make proper conditional for combo target in configure
Build with --with-combo

--- a/CLI/Makefile.am
+++ b/CLI/Makefile.am
@@ -58,7 +58,7 @@ pi_CLI_bmv2_SOURCES =
 nodist_EXTRA_pi_CLI_bmv2_SOURCES = dummy.cxx
 endif
 
-# Build combo CLI
+if WITH_COMBO
 bin_PROGRAMS += pi_CLI_combo
 
 pi_CLI_combo_LDADD = $(common_libs) \
@@ -68,6 +68,7 @@ $(top_builddir)/targets/combo/libpi_combo.la
 pi_CLI_combo_SOURCES =
 # Dummy C++ source to cause C++ linking.
 nodist_EXTRA_pi_CLI_combo_SOURCES = dummy.cxx
+endif
 
 if WITH_INTERNAL_RPC
 bin_PROGRAMS += pi_CLI_rpc
